--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'DA'
 - !lcsh 'Great Britain -- History -- Tudors, 1485-1603'
+- GITenberg
 title: History of England from the Fall of Wolsey to the Death of Elizabeth. Vol.
   III
 url: http://www.gutenberg.org/ebooks/39655
